; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/mxsfb/extr_mxsfb_drv.c_mxsfb_irq_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/mxsfb/extr_mxsfb_drv.c_mxsfb_irq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.mxsfb_drm_private* }
%struct.mxsfb_drm_private = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@LCDC_CTRL1 = common dso_local global i64 0, align 8
@CTRL1_CUR_FRAME_DONE_IRQ = common dso_local global i32 0, align 4
@REG_CLR = common dso_local global i64 0, align 8
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @mxsfb_irq_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mxsfb_irq_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.drm_device*, align 8
  %6 = alloca %struct.mxsfb_drm_private*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.drm_device*
  store %struct.drm_device* %9, %struct.drm_device** %5, align 8
  %10 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %11 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %10, i32 0, i32 0
  %12 = load %struct.mxsfb_drm_private*, %struct.mxsfb_drm_private** %11, align 8
  store %struct.mxsfb_drm_private* %12, %struct.mxsfb_drm_private** %6, align 8
  %13 = load %struct.mxsfb_drm_private*, %struct.mxsfb_drm_private** %6, align 8
  %14 = call i32 @mxsfb_enable_axi_clk(%struct.mxsfb_drm_private* %13)
  %15 = load %struct.mxsfb_drm_private*, %struct.mxsfb_drm_private** %6, align 8
  %16 = getelementptr inbounds %struct.mxsfb_drm_private, %struct.mxsfb_drm_private* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @LCDC_CTRL1, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @readl(i64 %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @CTRL1_CUR_FRAME_DONE_IRQ, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %2
  %26 = load %struct.mxsfb_drm_private*, %struct.mxsfb_drm_private** %6, align 8
  %27 = getelementptr inbounds %struct.mxsfb_drm_private, %struct.mxsfb_drm_private* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = call i32 @drm_crtc_handle_vblank(i32* %28)
  br label %30

30:                                               ; preds = %25, %2
  %31 = load i32, i32* @CTRL1_CUR_FRAME_DONE_IRQ, align 4
  %32 = load %struct.mxsfb_drm_private*, %struct.mxsfb_drm_private** %6, align 8
  %33 = getelementptr inbounds %struct.mxsfb_drm_private, %struct.mxsfb_drm_private* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @LCDC_CTRL1, align 8
  %36 = add nsw i64 %34, %35
  %37 = load i64, i64* @REG_CLR, align 8
  %38 = add nsw i64 %36, %37
  %39 = call i32 @writel(i32 %31, i64 %38)
  %40 = load %struct.mxsfb_drm_private*, %struct.mxsfb_drm_private** %6, align 8
  %41 = call i32 @mxsfb_disable_axi_clk(%struct.mxsfb_drm_private* %40)
  %42 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %42
}

declare dso_local i32 @mxsfb_enable_axi_clk(%struct.mxsfb_drm_private*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @drm_crtc_handle_vblank(i32*) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @mxsfb_disable_axi_clk(%struct.mxsfb_drm_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
